[package]
name = "vocasync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = {version = "0.7.5"}
deadpool = "0.12.1"
log = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.2", features = ["postgres"] }
thiserror = "1.0.64"
tokio = { version = "1.0", features = ["full"] }
tower-sessions = "0.13.0"
tower-sessions-sqlx-store = { version = "0.14.0", features = ["postgres"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
